--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "lib/libft"]
-	path = lib/libft
+[submodule "libft"]
+	path = libft
 	url = https://github.com/WOLFIE-OG/Libft
-[submodule "lib/ft_printf"]
-	path = lib/ft_printf
-	url = https://github.com/WOLFIE-OG/ft_printf
