--- a/.github/workflows/makefile.yml
+++ b/.github/workflows/makefile.yml
@@ -14,5 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: Get submodules
+      run: git submodule update --init --recursive
+
     - name: Make program
       run: make
